--- a/css/feature.scss
+++ b/css/feature.scss
@@ -38,7 +38,7 @@
     // color: $dark-accent;
     font-family: $sans;
     font-weight: $medium;
-    text-align: center;
+    text-align: left;
   }
 
   @media (max-width: $tablet) {
