--- a/css/code.scss
+++ b/css/code.scss
@@ -14,10 +14,12 @@ code * {
 
 // inline code
 code.highlighter-rouge {
-  padding: 2px 6px;
-  background: $gray-800;
+  background: $gray-400;
   color: $white;
   line-height: $spacing;
+  border-radius: 0.3em;
+  padding: 4px 5px 6px;
+  white-space: nowrap;
 }
 
 // code block
