--- a/_includes/read_more.html
+++ b/_includes/read_more.html
@@ -46,6 +46,6 @@
 
 <body>
 
-<div class="link-button"><a href="preliminary findings">Read more&nbsp;→</a></div>
+<div class="link-button"><a href="background">Read more&nbsp;→</a></div>
 
 </body>
