--- a/css/code.scss
+++ b/css/code.scss
@@ -14,12 +14,15 @@ code * {
 
 // inline code
 code.highlighter-rouge {
-  background: $gray-400;
-  color: $white;
+  background: $white;
+  color: $gray-800;
   line-height: $spacing;
   border-radius: 0.3em;
   padding: 4px 5px 6px;
   white-space: nowrap;
+  border-style: solid;
+  border-color: $blue-500;
+  border-width: 0.15em;
 }
 
 // code block
