--- a/css/genetic-interactions-list.scss
+++ b/css/genetic-interactions-list.scss
@@ -5,91 +5,6 @@
 @import "theme";
 @import "mixins";
 
-.query .center {
-  border-radius: 3px;
-  margin: auto;
-  width: 95%;
-  border: 3px solid $gray-400;
-  padding: 5px;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  margin-bottom: 15px;
-}
-
-.test {
-  border-radius: 3px;
-  margin: auto;
-  width: 95%;
-  border: 3px solid $gray-400;
-  padding: 5px;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  margin-bottom: 15px;
-}
-
-.top_center {
-  margin: 0;
-  width: 100%;
-  border: 5px solid $gray-400;
-  padding: 10px;
-  background-color: $gray-400
-}
-
-.query h2 {
-  color: $blue-gray-800;
-  font-size: 2em;
-}
-
-.query #rcorners1 {
-  border-radius: 10px;
-  background: $red-200;
-  padding: 4px;
-  width: 40px;
-  height: 35px;
-}
-
-.query #rcorners2 {
-  border-radius: 10px;
-  background: $light-blue-200;
-  padding: 4px;
-  width: 92px;
-  height: 35px;
-}
-
-.column-left {
-  float: left;
-  width: 33.333%;
-}
-.column-right {
-  float: right;
-  width: 33.333%;
-}
-.column-center {
-  display: inline-block;
-  width: 33.333%;
-}
-
-.both {
-  border-radius: 3px;
-  margin: auto;
-  width: 95%;
-  border: 3px solid $gray-400;
-  padding: 5px;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  margin-bottom: 15px;
-}
-
-.both .column-1 {
-  float: left;
-  width: 50%;
-}
-.both .column-2 {
-  float: left;
-  width: 50%;
-}
-
-.query .break{
-  margin: 0;
-}
-
 table.tableizer-table {
 	font-size: 18px;
 	border: 1px solid #CCC;
@@ -154,4 +69,12 @@ table.tableizer-table {
   border-radius: 0 5px 5px 0;
   cursor: pointer;
   font-size: 20px;
+}
+
+@media only screen and (max-width: 480px) {
+    /* horizontal scrollbar for tables if mobile screen */
+    .tablemobile {
+        overflow-x: auto;
+        display: block;
+    }
 }
